# Treon

./: .ciignore  .gitignore  BRANCH_COMPARISON.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_COMPARISON.md  Makefile  PERFORMANCE_COMPARISON.md  README.md  Treon.entitlements  remove_swift_files.sh  run  test.json  test_rust.swift
.ci/: line_allowlist.txt
.github/workflows/: ci.yml
Treon/: AppDelegate.swift  Constants.swift  JSONFormatter.swift  JSONNode.swift  ViewController.swift  main.swift
Treon.xcodeproj/: project.pbxproj
Treon/App/: AppDelegate.swift
Treon/Base.lproj/: Main.storyboard
Treon/Core/: Constants.swift  ErrorHandler.swift  HybridJSONProcessor.swift  JSONFormatter.swift  JSONNode.swift  RustBackend.swift
Treon/Resources/: Localizable.strings
Treon/Services/: DirectoryManager.swift  FileManager+Curl.swift  FileManager+Networking.swift  FileManager.swift  FileManagerTypes.swift  FileOperationsManager.swift  FileValidator.swift  PermissionManager.swift  RecentFilesManager.swift  SecurityScopedBookmarkManager.swift  TabManager.swift  UserSettingsManager.swift
Treon/Stubs/: HistoryStub.swift  HybridProcessorMock.swift  IntegrationsStub.swift  Mocks.swift  QueryStub.swift  ScriptsStub.swift
Treon/UI/: JSONTextView.swift  JSONTreeBuilder.swift  JSONViewerHelpers.swift  JSONViewerView.swift  LaunchScreenView.swift  NotificationManager.swift  SettingsView.swift  SettingsWindowController.swift  TabbedJSONViewerView.swift  TwoPaneRootView.swift  ViewController.swift
TreonTests/: ConstantsTests.swift  ErrorHandlerTests.swift  FileManagerTests.swift  JSONNodeTests.swift  LargeFileTests.swift  TreonTests.swift
TreonTests/Integration/: HybridArchitectureTests.swift  SmokeTests.swift
TreonTests/Mocks/: HybridProcessorMock.swift  HybridProcessorMockTests.swift
TreonTests/Unit/: ComprehensiveFileSizeTests.swift  ConstantsTests.swift  DataTypeDisplayTests.swift  DirectoryManagerTests.swift  EdgeCaseTests.swift  ErrorHandlerTests.swift  ErrorScenarioTests.swift  FileManagerSizeTests.swift  FileManagerTests.swift  FileValidatorTests.swift  HybridJSONProcessorIntegrationTests.swift  JSONFormatterTests.swift  (+20 more)
TreonUITests/: TreonUITests.swift  TreonUITestsLaunchTests.swift
benchmarks/: performance_test.py  simple_benchmark.py
cpp/: CMakeLists.txt  build.sh
cpp/docs/: CPP_MENU_CHALLENGES.md
cpp/include/: Application.hpp  I18nManager.hpp  JSONFileManager.hpp  JSONModel.hpp  Logger.hpp  PreferencesDialog.hpp  SettingsManager.hpp  Strings.hpp
cpp/include/treon/: AboutWindow.hpp  Application.h  Application.hpp  Constants.hpp  DirectoryManager.h  ErrorHandler.h  ErrorHandler.hpp  FileInfo.hpp  FileManager.h  FileManager.hpp  I18nManager.hpp  JSONNode.hpp  JSONParser.hpp  JSONViewModel.h  JSONViewModel.hpp
cpp/qml/: AboutWindow.qml  JSONViewer.qml  TwoPaneLayout.qml  main.qml
cpp/resources/: LICENSE.txt  TwoPaneLayout.qml  create_icon.sh  icon.icns  main.qml  resources.qrc
cpp/resources/qml/: AboutWindow.qml  Constants.qml  JSONTextView.qml  JSONTreeView.qml  LanguageSelector.qml  NotificationDialog.qml  PreferencesView.qml  PreferencesWindow.qml  TranslationUtils.qml  TwoPaneLayout.qml  main.qml  main_content.qml  qmldir
cpp/src/: AboutWindow.cpp  Application.cpp  DirectoryManager.cpp  ErrorHandler.cpp  FileInfo.cpp  FileManager.cpp  I18nManager.cpp  JSONFileManager.cpp  JSONModel.cpp  JSONNode.cpp  JSONParser.cpp  JSONViewModel.cpp  Logger.cpp  PreferencesDialog.cpp  SettingsManager.cpp  Strings.cpp  main.cpp
cpp/tests/: CMakeLists.txt  README.md  README_JSON_TESTS.md  json_benchmark_suite.cpp  json_benchmark_suite.hpp  json_data_generator.cpp  json_data_generator.hpp  json_performance_test.hpp  json_test_config.cpp  json_test_config.json  main_test.cpp  run_json_benchmark.cpp  test_about_window.cpp  test_about_window.hpp  test_application.cpp  test_application.hpp  test_json_validate.cpp
cpp/tests/benchmark/: README.md
cpp/tests/benchmark/json/: json_benchmark_suite.cpp  json_benchmark_suite.hpp  json_data_generator.cpp  json_data_generator.hpp  json_performance_test.cpp  json_test_config.hpp  json_test_config.json
cpp/tests/common/: test_helpers.cpp  test_helpers.hpp
cpp/tests/features/: about_window.feature  parse_basic.feature
cpp/tests/features/steps/: about_window_steps.cpp  steps.cpp
cpp/tests/integration/: test_about_window_integration.cpp  test_landing_screen_integration.cpp  test_validate_button.cpp
cpp/tests/integration/features/: about_window.feature  hybrid_architecture.feature  i18n.feature  i18n_steps.cpp  json_validation.feature  preferences_dialog.feature  translation_system.feature
cpp/tests/integration/features/steps/: about_window_steps.cpp  hybrid_architecture_steps.cpp  json_validation_steps.cpp  preferences_dialog_steps.cpp  translation_steps.cpp
cpp/tests/unit/: test_about_window.cpp  test_about_window.hpp  test_application.cpp  test_application.hpp  test_i18n_manager.cpp  test_json_validation.cpp  test_language_selector.cpp  test_notification_dialog.cpp  test_preferences_dialog.cpp  test_translation_system.cpp
cpp/translations/: treon_en.ts  treon_en_GB.ts  treon_en_US.qm  treon_es.qm  treon_es.ts  treon_fr.qm  treon_fr.ts
docs/: CONTRIBUTING.md  TESTING.md  TREON_CHECKLIST.md  TREON_DECISION.md  performance-optimization-research.md
rust_backend/: Cargo.toml
rust_backend/coverage/: tarpaulin-report.html
rust_backend/src/: error.rs  json_processor.rs  lib.rs  streaming_parser.rs  tree_builder.rs
rust_backend/tests/: test_error_scenarios.rs  test_errors.rs  test_file_sizes.rs  test_json_processor.rs  test_lib.rs  test_performance.rs  test_serialization_roundtrip.rs  test_tree_builder.rs
scripts/: build.sh  build_rust.sh  ci_check.sh  configure_json_tests.sh  deploy_rust_lib.sh  dev_run.sh  pre_build.sh  quick_stats.sh  run_app.sh  run_cli.sh  run_json_benchmark.sh  run_tests.sh  run_tests_with_coverage.sh  setup_xcode_build_phase.sh  test_all.sh  test_comprehensive.sh  test_integration.sh  test_quick.sh  test_rust.sh  test_stats.sh  test_swift.sh  toggle_tests.sh
swift_ui/: CppJSONTreeView.swift
(+130 files in other folders)
