[package]
name = "treon-rust-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "treon_rust_backend"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# High-performance JSON processing
simd-json = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Memory management
bytes = "1.0"

# Async file operations
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
